--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,10 @@
       <h2>Available Levels:</h2>
       <ul id="level-list"></ul>
     </div>
+    <div id="characters-list">
+      <h2>Available Characters:</h2>
+      <ul id="character-list"></ul>
+    </div>
     <script src="scripts.js?v=1.0.4"></script>
   </body>
 </html>
