Update webpage name.

--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Level Storage</title>
+    <title>Sticky Paws Bucket</title>
   </head>
   <body>
-    <h1>Game Level Storage</h1>
+    <h1>Sticky Paws Bucket</h1>
     <p>
       <strong>Note:</strong> This page is intended for debugging purposes only.
     </p>
