Add links to webpage.

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,11 @@
       <strong>Note:</strong> This page is intended for debugging purposes only.
     </p>
     <p>
+      <strong>Links:</strong>
+      <a href="https://www.jonnil.games/sticky-paws">Sticky Paws</a> |
+      <a href="https://cloud.google.com/">Google Cloud</a>
+    </p>
+    <p>
       For production builds, please replace this page with the appropriate
       website or relevant resource. To access the information on this page in
       the future, you can visit this bucket on Google Cloud.
