update gcloud link

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,9 @@
     <p>
       <strong>Links:</strong>
       <a href="https://www.jonnil.games/sticky-paws">Sticky Paws</a> |
-      <a href="https://cloud.google.com/">Google Cloud</a>
+      <a href="https://console.cloud.google.com/welcome?project=sticky-paws"
+        >Google Cloud</a
+      >
     </p>
     <p>
       For production builds, please replace this page with the appropriate
