Update wording of header message.

--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
     </p>
     <p>
       For production builds, please replace this page with the appropriate
-      website or relevant resource. To access the information on this page in
-      the future, you can visit this bucket on Google Cloud.
+      website or relevant resource.</br>To access this information in
+      the future, visit the Google Cloud Console.
     </p>
     <div id="levels-list">
       <h2>Available Levels:</h2>
